# gtfs-utils

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bigdata.ipynb  pyproject.toml  requirements.txt  setup.py  test-examples.ipynb
.github/workflows/: main.yml  release.yml  test.yml
gtfs_utils/: __init__.py  __main__.py  analyze.py  bounds.py  filter.py  filter_command.py  info.py  remove_shapes.py  utils.py
gtfs_utils/cli/: app.py  bounds.py  cli_utils.py  filter.py  info.py
gtfsfilter/: __init__.py  __main__.py  analyze.py  filter.py  format.py
tests/: conftest.py  test_filter_bounds.py  test_filter_route_types.py  test_info.py
tests/data/sample-feed.gtfs/: agency.txt  routes.txt
